--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>GH Pages for VueEditor Content</h1>
-<script src="/dist/main.docs.js" charset="utf-8"></script>
+<script src="/vue2-editor/dist/main.docs.js" charset="utf-8"></script>
 </body>
 </html>
