--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>VueEditor</title>
 </head>
 <body>
-<h1>GH Pages for VueEditor Content</h1>
-<script src="/vue2-editor/dist/main.docs.js" charset="utf-8"></script>
+  <h1>GH Pages for VueEditor Content</h1>
+  <div id="app"></div>
+  <script src="/vue2-editor/dist/main.docs.js" charset="utf-8"></script>
 </body>
 </html>
