--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>VueEditor</title>
-</head>
-<body>
-  <h1>GH Pages for VueEditor Content</h1>
-  <div id="app"></div>
-  <script src="/vue2-editor/dist/main.docs.js" charset="utf-8"></script>
-</body>
+<html>
+  <head>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <title>Vue App</title>
+  <link href="/vue2-editor/client.7f02216c.css" rel="stylesheet"></head>
+  <body>
+    <div id="app"></div>
+  <script type="text/javascript" src="/vue2-editor/client.4c293916.js"></script></body>
 </html>
