--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Vue App</title>
-  <link href="/vue2-editor/client.7f02216c.css" rel="stylesheet"></head>
-  <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="/vue2-editor/client.4c293916.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta http-equiv="Content-type" content="text/html; charset=utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>vue2-editor</title><meta name="description" content="HTML editor using Vue.js 2.0 and Quill.js, an open source editor&#34;"><link href="/vendor.e0eb6103.css" rel="stylesheet"><link href="/client.4b4757a6.css" rel="stylesheet"></head><body><div id="app"></div><script type="text/javascript" src="/manifest.66bc2ee4.js"></script><script type="text/javascript" src="/vendor.8dd95e7c.js"></script><script type="text/javascript" src="/client.11f7a43e.js"></script></body></html>
